--- a/WinUpCheck/web/master.xhtml
+++ b/WinUpCheck/web/master.xhtml
@@ -1,5 +1,8 @@
-<html>
-    <head>
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
+    <h:head>
         <title>マスタ登録</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,11 +15,11 @@
                 font-size: 1.5em;
             }
         </style>
-    </head>
-    <body>
+    </h:head>
+    <h:body>
         <div>TODO write content</div>
         <form>
             <!--<input button value="送信" action="#{syosekiBeans.next()}">-->
         </form>
-    </body>
+    </h:body>
 </html>
