--- a/WinUpCheck/web/master.xhtml
+++ b/WinUpCheck/web/master.xhtml
@@ -4,8 +4,6 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>マスタ登録</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             body {
                 font-size: 14pt;
@@ -19,7 +17,7 @@
     <h:body>
         <div>TODO write content</div>
         <form>
-            <!--<input button value="送信" action="#{syosekiBeans.next()}">-->
+            <h:link outcome="input">［戻る］</h:link>
         </form>
     </h:body>
 </html>
