各種ボタンの配置修正

--- a/WinUpCheck/web/master.xhtml
+++ b/WinUpCheck/web/master.xhtml
@@ -82,7 +82,7 @@
                     <td></td>
                     <td></td>
                     <td>　　　　　　　</td>
-                    <td style=""><h:commandButton action="#{masterControl.next()}" value="登　録"
+                    <td><h:commandButton action="#{masterControl.next()}" value="登　録"
                          style="width: 100px; height: 30px;left: 590px; position: absolute;"/></td>
                     
                 </tr>
@@ -115,7 +115,8 @@
                     <td style="float: right"> <h:outputLabel value="新しいPC名：" /> </td>
                     <td> <h:inputText value="#{masterControl.newPcName}" /> </td>
                     <td></td>
-                    <td style="float: right"><h:commandButton action="#{masterControl.update()}" value="更新"  style="width: 100px; height: 30px"/></td>
+                    <td></td>
+                    <td><h:commandButton action="#{masterControl.update()}" value="更新"  style="width: 100px; height: 30px;left: 590px; position: absolute;"/></td>
                 </tr>
             
             </table>
