備考の入力内容が反映されないバグを修正

--- a/WinUpCheck/web/input.xhtml
+++ b/WinUpCheck/web/input.xhtml
@@ -102,7 +102,7 @@
             <tr>
                 <td align="right">備考：</td>
                 <td>
-                    <h:inputTextarea class="note" disabled="true" value="#{inputControl.note}" cols="77" rows="5" label="備考"/>
+                    <h:inputTextarea class="note"  value="#{inputControl.note}" cols="77" rows="5" label="備考"/>
                 </td>
             </tr>
             
