20160902　修正(masterModelのinputCheck列削除)

--- a/WinUpCheck/web/input.xhtml
+++ b/WinUpCheck/web/input.xhtml
@@ -39,7 +39,7 @@
 
                 if(text == "◯" || text == "") {
                     document.getElementsByClassName(note)[0].disabled = true;
-                    document.myForm.note.value = "";
+                    document.getElementsByClassName(note)[0].value = "";
                 } else if(text == "※") {
                     document.getElementsByClassName(note)[0].disabled = false;
                 }                                               
